fixed variable footer height overflow problem

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,9 +3,8 @@ footer.results-container{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    position: fixed;
+    position: sticky;
     bottom: 0;
-    left: 0;
     width: 100%;
     min-height: 70px;
     padding: 16px;
