--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -20,16 +20,12 @@ main.start-screen > *:not(:last-child){
 
 ol {
     width: min(80%, 550px);
-    height: calc(100vh - 250px);
-    overflow-y: auto;
+    flex: 1;
 }
 
 ol li{
     margin: 0 auto;
     border-radius: 5px;
-}
-
-ol li:not(:last-child){
     margin-bottom: 1em;
 }
 
